--- a/Pumpkin.Monitor/Pumpkin.Monitor.csproj
+++ b/Pumpkin.Monitor/Pumpkin.Monitor.csproj
@@ -47,6 +47,8 @@
   <ItemGroup>
     <Compile Include="Monitor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="MethodPatch.cs" />
+    <Compile Include="MonitorExceptions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="sn.snk" />
