--- a/PumpkinTests/PumpkinTests.csproj
+++ b/PumpkinTests/PumpkinTests.csproj
@@ -52,14 +52,21 @@
   <ItemGroup>
     <Compile Include="CompilationTests.cs" />
     <Compile Include="ResourceLimitationTests.cs" />
+    <Compile Include="Tests\CreateThread.cs" />
+    <Compile Include="Tests\ThrowException.cs" />
     <Compile Include="Tests\CreateObjectWithActivator.cs" />
-    <Compile Include="Tests\SemiPatched_HelloWorld.cs" />
-    <Compile Include="Tests\Patched_HelloWorld.cs" />
-    <Compile Include="Tests\Patched_FileRead.cs" />
+    <Compile Include="Tests\EndlessLoop.cs" />
+    <Compile Include="Tests\ObjectCreation.cs" />
+    <Compile Include="Tests\Patched_ObjectCreation.cs" />
+    <Compile Include="Tests\OutOfMemory.cs" />
+    <Compile Include="Tests\HelloWorld.cs" />
     <Compile Include="Tests\FileRead.cs" />
     <Compile Include="Tests\ForkBomb.cs" />
     <Compile Include="SandboxingTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\Patched_FileRead.cs" />
+    <Compile Include="Tests\Patched_HelloWorld.cs" />
+    <Compile Include="Tests\StackOverflow.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Pumpkin.Monitor\Pumpkin.Monitor.csproj">
